# c-toxcore_team

./: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  circle.yml  configure  configure.ac  meson.build  meson_options.txt
__debug__/: _compile_loop.sh
__script/: build_tbw_on_pi.sh  build_utox_on_ubuntu.sh
cmake/: Dependencies.cmake
docs/: toxav_threading.md
tox/: meson.build
toxav/: BUILD.bazel  Makefile.inc  a.c  audio.c  audio.h  b.c  bwcontroller.c  bwcontroller.h  dummy_ntp.c  dummy_ntp.h  h264.c  h264_omx.c  meson.build  msi.c  ring_buffer.c  ring_buffer.h  ring_buffer_test.cc  rtp.c  rtp.h  tox_generic.h  toxav.c  toxav.h  ts_buffer.c  ts_buffer.h  video.c  video.h  vpx.c
toxav/codecs/: toxav_codecs.h
toxav/codecs/h264/: codec.c
toxav/codecs/h264_omx_raspi/: codec.c
toxav/codecs/vpx/: codec.c
toxcore/: BUILD.bazel  LAN_discovery.c  Makefile.inc  Messenger.c  Messenger.h  logger.c  logger.h  meson.build  net_crypto.c  network.c  network.h  tox.api.h  tox.c  tox.h
toxutil/: BUILD.bazel  toxutil.c  toxutil.h
