load("//tools:no_undefined.bzl", "cc_library")

filegroup(
    name = "public_headers",
    srcs = ["toxav.h"],
    visibility = ["//c-toxcore:__pkg__"],
)

cc_library(
    name = "public",
    hdrs = [":public_headers"],
)

cc_library(
    name = "dummy_ntp",
    srcs = ["dummy_ntp.c"],
    hdrs = ["dummy_ntp.h"],
    deps = ["//c-toxcore/toxcore:ccompat"],
)

cc_library(
    name = "vpx_codec",
    srcs = ["codecs/vpx/codec.c"],
    hdrs = ["audio.h","toxav.h","video.h","pair.h","msi.h","rtp.h","tox_generic.h",
            "codecs/toxav_codecs.h"],
    deps = ["@libvpx","@opus","//c-toxcore/toxcore:ccompat",
    "//c-toxcore/toxcore:Messenger",":bwcontroller"],
)

cc_library(
    name = "h264_codec",
    srcs = ["codecs/h264/codec.c"],
    hdrs = ["audio.h","toxav.h","video.h","pair.h","msi.h","rtp.h","tox_generic.h",
            "codecs/toxav_codecs.h"],
    deps = ["@ffmpeg","@opus","@x264//:core","//c-toxcore/toxcore:ccompat",
    "//c-toxcore/toxcore:Messenger",":bwcontroller"],
)

cc_library(
    name = "ts_buffer",
    srcs = ["ts_buffer.c"],
    hdrs = ["ts_buffer.h"],
    deps = [":rtp","//c-toxcore/toxcore:ccompat"],
)

cc_library(
    name = "ring_buffer",
    srcs = ["ring_buffer.c"],
    hdrs = ["ring_buffer.h"],
    deps = ["//c-toxcore/toxcore:ccompat"],
)

cc_test(
    name = "ring_buffer_test",
    srcs = ["ring_buffer_test.cc"],
    deps = [
        ":ring_buffer",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "bwcontroller",
    srcs = ["bwcontroller.c"],
    hdrs = ["bwcontroller.h"],
    deps = [
        ":ring_buffer",
        "//c-toxcore/toxcore:Messenger",
    ],
)

cc_library(
    name = "rtp",
    srcs = ["rtp.c"],
    hdrs = ["rtp.h","video.h","toxav.h","pair.h","audio.h"],
    deps = ["@opus",":bwcontroller", ":dummy_ntp"],
)

cc_test(
    name = "rtp_test",
    srcs = ["rtp_test.cc"],
    deps = [
        ":rtp",
        "//c-toxcore/toxcore:crypto_core",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "pair",
    hdrs = ["pair.h"],
)

cc_library(
    name = "audio",
    srcs = ["audio.c"],
    hdrs = ["audio.h"],
    deps = [
        ":pair",
        ":public",
        ":rtp",
        ":ts_buffer",
        "//c-toxcore/toxcore:network",
        "@opus",
    ],
)

cc_library(
    name = "video",
    srcs = [
        "msi.c",
        "video.c",
    ],
    hdrs = [
        "msi.h",
        "video.h","tox_generic.h","codecs/toxav_codecs.h"
    ],
    deps = [
        ":audio",
        ":pair",
        ":public",
        "//c-toxcore/toxcore:network",
        "@libvpx",
    ],
)

cc_library(
    name = "groupav",
    srcs = ["groupav.c"],
    hdrs = ["groupav.h"],
    deps = [
        "//c-toxcore/toxcore:group",
        "@opus",
    ],
)

cc_library(
    name = "toxav",
    srcs = [
        "toxav.c",
        "toxav_old.c",
    ],
    hdrs = [
        "toxav.api.h",
        "toxav.h", "tox_generic.h","codecs/toxav_codecs.h"
    ],
    visibility = ["//c-toxcore:__subpackages__"],
    deps = [
        ":groupav",
        ":video",
        ":vpx_codec",
        ":h264_codec"
    ],
)

cc_library(
    name = "monolith",
    hdrs = glob([
        "*.c",
        "*.h",
    ]),
    visibility = [
        "//c-toxcore/other:__pkg__",
        "//c-toxcore/testing:__pkg__",
    ],
    deps = [
        "//c-toxcore/toxcore:group",
        "@libvpx",
        "@opus",
    ],
)
